# scop

./: .gitignore  .gitmodules  CMakeLists.txt  Win_Makefile  build.bat  run.bat
dependencies/GLEW/lib/: libGLEW.so.2.1.0
dependencies/glfw-3.3.6/: CMakeLists.txt
dependencies/glfw-3.3.6/docs/html/: build_8dox.html  build_guide.html  compat_8dox.html  compat_guide.html  compile_8dox.html  compile_guide.html  context_8dox.html  context_guide.html  deprecated.html  dir_1357527d313180d9ef816e7eb4556513.html  dir_397e67d9ed078d65734e47f77659a0d8.html  dir_4e47cedb51244b8bb7c2a64e32093b43.html  dir_cee0cdc0f52d89cdd1c7c3c3d5df28f8.html  files.html  glfw3_8h.html  glfw3_8h_source.html  glfw3native_8h.html  glfw3native_8h_source.html  group__buttons.html  group__context.html  group__errors.html  group__gamepad__axes.html  group__gamepad__buttons.html  group__hat__state.html  group__init.html  group__input.html  group__joysticks.html  group__keys.html  group__mods.html  group__monitor.html  group__native.html  group__shapes.html  group__vulkan.html  group__window.html  index.html  input_8dox.html  input_guide.html  internal_8dox.html  internals_guide.html  intro_8dox.html  (+20 more)
inc/: BMPParser.h  Logger.h  ModelController.h  Utils.h
inc/EZGL/: FlyController.h  KeyListener.h  Mesh.h  MouseListener.h  Shader.h  Texture.h  VertexBuffer.h  Window.h
inc/EZGL/Math/: Matrix.h  Vector.h
inc/ObjParser/: Face.h  ObjParser.h
shaders/: Model.frag  Model.vert
src/: BMPParser.cpp  Logger.cpp  ModelController.cpp  main.cpp  utils.cpp
src/EZGL/: FPSCounter.cpp  FlyController.cpp  KeyListener.cpp  Light.cpp  Material.cpp  Mesh.cpp  MouseListener.cpp  PerspectiveCamera.cpp  Shader.cpp  Texture.cpp  VertexBuffer.cpp  Window.cpp
src/EZGL/Math/: Matrix.cpp  mathutils.cpp
src/ObjParser/: Face.cpp  ObjParser.cpp
